--- a/PCA0.ipynb
+++ b/PCA0.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "PCA0.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyN+H5Op5U0PY6Cc4de6ussl",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPbH200T0huffzj51+A039L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,52 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
+        "id": "qCvnmAIwweZr"
+      },
+      "source": [
+        "**Clone the repo**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iqQfm_pdU0-k"
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3V02BQBFOt_f"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca0.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7bvQ2nYUUfbo"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca1.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "d7d6JVzSBequ"
       },
       "source": [
@@ -39,27 +84,169 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "qCvnmAIwweZr",
-        "colab_type": "text"
+        "id": "H7JhdYueVy-3"
       },
       "source": [
-        "**Clone the repo**"
-      ]
+        "from IPython.display import Image\n",
+        "Image(\"images/pca9.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iqQfm_pdU0-k",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xwjj47OKVsoU"
       },
       "source": [
-        "# Clone the entire repo.\n",
-        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "from IPython.display import Image\n",
+        "Image(\"images/pca8.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OkF_LY72Vicm"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca7.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WvMGokEjVV_A"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca6.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "olrAzTV0VK9J"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca5.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dcxvrxPPU-Ih"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca4.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ecFXq6nUpBy"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca3.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yzK-KVFMUi1D"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca2.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M7ldyGMaW_Ia"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca15.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oVflYi7UW6kY"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca14.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2q7vwA8JWx8O"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca13.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MMYcXMHhWqVm"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca12.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IiNacqGeWkob"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca11.png\" , width=600)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q5fSg4dbWRWX"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/pca10.png\" , width=600)"
       ],
       "execution_count": null,
       "outputs": []
@@ -67,8 +254,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jAnAtGR1wh16",
-        "colab_type": "text"
+        "id": "jAnAtGR1wh16"
       },
       "source": [
         "**Import libraries**"
@@ -77,9 +263,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R7DmpbtP2lnE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "R7DmpbtP2lnE"
       },
       "source": [
         "import pandas as pd\n",
@@ -98,8 +282,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f3_2HaF26SFA",
-        "colab_type": "text"
+        "id": "f3_2HaF26SFA"
       },
       "source": [
         "# **Can we predict how a viewer will rate a movie?**"
@@ -108,8 +291,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zNXU-8X1wlpw",
-        "colab_type": "text"
+        "id": "zNXU-8X1wlpw"
       },
       "source": [
         "**Load and prepare the data**"
@@ -118,9 +300,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Aw8l12qj5cly",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Aw8l12qj5cly"
       },
       "source": [
         "#Load movie names and movie ratings\n",
@@ -132,9 +312,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AnnUyj2eVVIq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AnnUyj2eVVIq"
       },
       "source": [
         "movies = pd.DataFrame(movies)\n",
@@ -146,9 +324,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bq2aElQxusw-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bq2aElQxusw-"
       },
       "source": [
         "movies = movies.drop(['title','genres'],axis=1)"
@@ -159,9 +335,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pktg6DDY5Msy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pktg6DDY5Msy"
       },
       "source": [
         "movies.head(40)"
@@ -172,9 +346,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RbsQfgrRhZFY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RbsQfgrRhZFY"
       },
       "source": [
         "M = movies.pivot_table(index=['userId_x'], columns=['movieId'], values='rating')\n",
@@ -188,9 +360,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TH7Tndwp6Ap6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TH7Tndwp6Ap6"
       },
       "source": [
         "df1.head()"
@@ -201,8 +371,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NKy-XDYzwu7S",
-        "colab_type": "text"
+        "id": "NKy-XDYzwu7S"
       },
       "source": [
         "**Scale the data**"
@@ -211,9 +380,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6ZfqbzQZ6Cle",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6ZfqbzQZ6Cle"
       },
       "source": [
         "X_std = StandardScaler().fit_transform(df1)"
@@ -224,8 +391,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MYIGL-QbwyN0",
-        "colab_type": "text"
+        "id": "MYIGL-QbwyN0"
       },
       "source": [
         "**Compute covariance matrix**"
@@ -234,9 +400,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3EVFQNKC6G5d",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3EVFQNKC6G5d"
       },
       "source": [
         "mean_vec = np.mean(X_std, axis=0)\n",
@@ -249,8 +413,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nbBxpUqbxKNj",
-        "colab_type": "text"
+        "id": "nbBxpUqbxKNj"
       },
       "source": [
         "**Compute the Principal Components of the data set**"
@@ -259,9 +422,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p_dg2rEo6J5h",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p_dg2rEo6J5h"
       },
       "source": [
         "#Calculating eigenvectors and eigenvalues on covariance matrix\n",
@@ -276,8 +437,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zWV8m9eMxd5_",
-        "colab_type": "text"
+        "id": "zWV8m9eMxd5_"
       },
       "source": [
         "**Compute the feature vector**"
@@ -286,9 +446,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z3lszu_uxeG4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z3lszu_uxeG4"
       },
       "source": [
         "# Visually confirm that the list is correctly sorted by decreasing eigenvalues\n",
@@ -303,8 +461,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s4Oz2-kgxsLr",
-        "colab_type": "text"
+        "id": "s4Oz2-kgxsLr"
       },
       "source": [
         "**Use the PCA() function to reduce the dimensionality of the data set**"
@@ -313,9 +470,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VHAH-JMH6Sr0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VHAH-JMH6Sr0"
       },
       "source": [
         "pca = PCA(n_components=2)\n",
@@ -328,8 +483,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bkls9TJPxztU",
-        "colab_type": "text"
+        "id": "bkls9TJPxztU"
       },
       "source": [
         "**Scree plot expresses the variance associated with each principal component**"
@@ -338,9 +492,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E3PZJUOH6bY1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "E3PZJUOH6bY1"
       },
       "source": [
         "pca = PCA().fit(X_std)\n",
@@ -355,8 +507,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Q_VMFIY1x7Jl",
-        "colab_type": "text"
+        "id": "Q_VMFIY1x7Jl"
       },
       "source": [
         "The scree plot clearly indicates that the first 500 principal components contain the maximum information (variance) within the data. Note that the initial data set had approximately 1550 features which can now be narrowed down to just 500. You can now easily perform further analysis on the data since the redundant or insignificant variables are out. This is the power of dimensionality reduction."
