--- a/Logistic_Regression_NB1.ipynb
+++ b/Logistic_Regression_NB1.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOblNgHHViUz/w7iJocHu9j",
+      "authorship_tag": "ABX9TyMLKUwT9o5SZ0WISZywbjPI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
         "id": "PctWqwAuuAuk"
       },
       "source": [
-        "plt.scatter(X[:,0],X[:,1])\n",
+        "plt.scatter(X[:,0],X[:,1],c=y)\n",
         "plt.show()"
       ],
       "execution_count": null,
