--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMJHq5zRx6+G3zK/NFB4Guy",
+      "authorship_tag": "ABX9TyPeP9PAYYVrRxP4dhY0TMKv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "id": "TyTWw3ptXfOC"
       },
       "source": [
-        "reg = LinearRegression().fit(X_train, y_train)"
+        "reg = LinearRegression().fit(X_train, y_train)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -161,6 +161,17 @@
         "A negative sign indicates that as the predictor variable increases, the response variable decreases.<br>\n",
         "Score is the accuracy of the model, the best score equals 1"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r6g9OZYMdEXH"
+      },
+      "source": [
+        "y_pred = reg.predict(np.array(X_test))"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -196,17 +207,6 @@
         "**Make predictions with the trained model**<br>\n",
         "Use the test data to make predictions with the trained model"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r6g9OZYMdEXH"
-      },
-      "source": [
-        "y_pred = reg.predict(np.array(X_test))"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
