--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPeP9PAYYVrRxP4dhY0TMKv",
+      "authorship_tag": "ABX9TyOaUkWDIgK5UM0ywwpz3SRs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,7 +231,8 @@
         "#for i in range(9):\n",
         "#  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
         "#for Assignment 2 comment out the following line\n",
-        "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
+        "y_vals = reg.intercept_ + reg.coef_[0:1] * x_vals\n",
+        "plt.plot(x_vals, y_vals, color='red')\n",
         "\n",
         "#plot the line using the x and y values\n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
