--- a/IntroToClassification.ipynb
+++ b/IntroToClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroToClassification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNXc0bTUmoaiypZSIxyDfMu",
+      "authorship_tag": "ABX9TyNuc4h43s+NrP9o16tqUpkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0JDVrgGi6feW"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "def page(num):\n",
+        "    return Image(\"c5-content/c5PythonProgramming\"+str(num)+ \".png\" , width=640)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "JAb3dXHkiGl5"
@@ -58,15 +71,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fsxJ-s43ip7r"
-      },
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "code",
@@ -100,7 +104,7 @@
         "id": "cXvqlqltlxJK"
       },
       "source": [
-        "The followings are some important ML classification algorithms −\n",
+        "The following are some important ML classification algorithms −\n",
         "<br>\n",
         "- Logistic Regression\n",
         "- Support Vector Machine (SVM)\n",
