--- a/IntroToClassification.ipynb
+++ b/IntroToClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroToClassification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNuc4h43s+NrP9o16tqUpkg",
+      "authorship_tag": "ABX9TyNujnWC/ad8aNUhHooCKQ8t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +128,8 @@
         "id": "w-sGjx_ttcyR"
       },
       "source": [
-        "[KNN](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/KNN_1.ipynb#scrollTo=VxPz4ZIxWWQa)"
+        "[KNN](https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/KNN1.ipynb)\n",
+        "\n"
       ]
     },
     {
