--- a/Logistic_Regression_NB1.ipynb
+++ b/Logistic_Regression_NB1.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMLKUwT9o5SZ0WISZywbjPI",
+      "authorship_tag": "ABX9TyNotDtK7scYU3z+dgNHx5aV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
         "2 classes<br>\n",
         "\n",
         "```\n",
-        "X,y = make_classification(n_samples=300, n_features=4,  n_classes=2, n_clusters_per_class=1)\n",
+        "X,y = make_classification(n_samples=300, n_features=4,  n_classes=2, n_clusters_per_class=1, class_sep=0.1)\n",
         "```\n",
         "Copy this above code and use this code to create a new data set. \n",
         "You'll notice this data set has 2 classes but they are not necessarily clearly separated classes. \n",
