--- a/NaiveBayesGaussian.ipynb
+++ b/NaiveBayesGaussian.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNxbAxtswODVlmXT+VpcaER",
+      "authorship_tag": "ABX9TyNNU7/tHa2QK/iKfx00JDt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,13 +90,13 @@
       "source": [
         "The following are some common applications of Naïve Bayes classification<br>\n",
         "\n",
-        "- Real-time prediction − Due to its ease of implementation and fast computation, it can be used to do prediction in real-time.\n",
+        "- Real-time prediction − Its ease of implementation and fast computation means it can be used to do prediction in real-time.\n",
         "\n",
-        "- Multi-class prediction − Naïve Bayes classification algorithm can be used to predict posterior probability of multiple classes of target variable.\n",
+        "- Multi-class prediction − Naïve Bayes classification algorithm can be used to predict the probability of multiple classes of target variable.\n",
         "\n",
-        "- Text classification − Due to the feature of multi-class prediction, Naïve Bayes classification algorithms are well suited for text classification. That is why it is also used to solve problems like spam-filtering and sentiment analysis.\n",
+        "- Text classification − Due to the feature of multi-class prediction, Naïve Bayes classification algorithms are well suited for text classification. It is used for spam-filtering and sentiment analysis.\n",
         "\n",
-        "- Recommendation system − Along with the algorithms like collaborative filtering, Naïve Bayes can be used as a Recommendation system which can filter unseen information and to predict weather a user would like the given resource or not."
+        "- Recommendation system − Along with the algorithms like collaborative filtering, Naïve Bayes can be used as a Recommendation system which can filter unseen information and predicts whether a user would like a given suggestion"
       ]
     },
     {
@@ -146,6 +146,11 @@
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "#import matplotlib.pyplot as plty\n",
+        "\n",
+        "from sklearn.datasets import make_blobs\n",
+        "!pip uninstall matplotlib\n",
+        "!pip install matplotlib==3.1.3\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
@@ -166,9 +171,9 @@
         "id": "4NUdEkLTigSJ"
       },
       "source": [
-        "from sklearn.datasets import make_blobs\n",
         "X, y = make_blobs(2000, 2, centers=2, random_state=2, cluster_std=1.5)\n",
-        "plt.scatter(X[:, 0], X[:, 1], c=y, s=50, cmap='RdBu');"
+        "plt.scatter(X[:, 0], X[:, 1])\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
