--- a/DecisionTrees.ipynb
+++ b/DecisionTrees.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM+VmCdWC9ufBeBFLvwSWN3",
+      "authorship_tag": "ABX9TyPlOip7KoCpG1LsH/Pvn8ul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,37 @@
       },
       "source": [
         "tree.plot_tree(clf) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EvKR0rkSW78x"
+      },
+      "source": [
+        "import graphviz \n",
+        "dot_data = tree.export_graphviz(clf, out_file=None) \n",
+        "graph = graphviz.Source(dot_data) \n",
+        "graph.render(\"iris\") "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8nGKG9uKW_aF"
+      },
+      "source": [
+        "dot_data = tree.export_graphviz(clf, out_file=None, \n",
+        "                     feature_names=iris.feature_names,  \n",
+        "                     class_names=iris.target_names,  \n",
+        "                     filled=True, rounded=True,  \n",
+        "                     special_characters=True)  \n",
+        "graph = graphviz.Source(dot_data)  \n",
+        "graph "
       ],
       "execution_count": null,
       "outputs": []
